profilelist1exp/unpackaged/objects/Product_Code__c.object
<CustomObject>
    <description>This will store all the Products that are not in standard Product catalog</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Book_Entry_Name__c</fullName>
        <label>Price Book Entry Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code_EID__c</fullName>
        <label>Product Code EID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_family__c</fullName>
        <label>Product family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WYSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Price_USD__c</fullName>
        <label>Standard Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wyse_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Product Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>